--- a/mcomp-semantic-analysis/lib/dune
+++ b/mcomp-semantic-analysis/lib/dune
@@ -1,6 +1,7 @@
 (library
  (name mcomp_lang)
  (public_name mcomp-lang)
+ (libraries easy_logging)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))
 
 (ocamllex
