--- a/mcomp-codegen/lib/dune
+++ b/mcomp-codegen/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name mcomp_lang)
  (public_name mcomp-lang)
- (libraries llvm llvm.analysis llvm.scalar_opts)
+ (libraries llvm llvm.analysis llvm.scalar_opts easy_logging)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))
 
 (ocamllex
